<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_organizer_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />

    <item
        android:id="@+id/nav_organizer_createevent"
        android:icon="@drawable/baseline_add_box_24"
        android:title="Create Event" />

    <item
        android:id="@+id/nav_organizer_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile" />

</menu>
