<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_entrant_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />

    <item
        android:id="@+id/nav_entrant_qrscanner"
        android:icon="@drawable/baseline_qr_code_24"
        android:title="QR Scanner" />

    <item
        android:id="@+id/nav_entrant_notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="Notifications" />

    <item
        android:id="@+id/nav_entrant_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile" />

</menu>
